--- a/package.json
+++ b/package.json
@@ -56,6 +56,10 @@
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3"
   },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/",
+    "tag": "latest"
+  },
   "jest": {
     "moduleFileExtensions": [
       "js",
