--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "author": "",
   "private": false,
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "main": "dist/index.js",
   "license": "UNLICENSED",
   "scripts": {
