--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,4 +17,6 @@
       "@app/*": ["./src/*"]
     }
   },
+  "include": ["src"],
+  "exclude": ["node_modules", "test", "dist", "**/*spec.ts", "./src/**/*spec.ts"]
 }
