fix: change alias #47

--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
       "^.+\\.(t|j)s$": "ts-jest"
     },
     "moduleNameMapper": {
-      "^@app/(.*)$": "<rootDir>/$1"
+      "^bingx-api/(.*)$": "<rootDir>/$1"
     },
     "collectCoverageFrom": [
       "**/*.(t|j)s"
