--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "files": [
     "dist/**"
   ],
+  "types": "dist/index.d.ts",
   "main": "dist/index.js",
   "license": "UNLICENSED",
   "scripts": {
