--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "semantic-release": "semantic-release",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build && cp -r ./dist/** ./"
   },
   "dependencies": {
     "@nestjs/axios": "^3.0.0",
