--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "author": "",
   "private": false,
   "files": [
-    "dist/**"
+    "**"
   ],
-  "types": "dist/index.d.ts",
-  "main": "dist/index.js",
+  "types": "index.d.ts",
+  "main": "index.js",
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
