--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "axios": "^1.5.1",
     "axios-request-throttle": "^1.0.0",
     "date-fns": "^3.3.1",
+    "json-bignumber": "^1.1.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "ws": "^8.14.2"
